# open-moniker

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TELEMETRY.md  WINDOWS_START.md  config.py  config.sample.yaml  config.yaml  config_backup.yaml  config_test.yaml  config_zmq.sample.yaml  demo.py  domains.yaml  example_catalog.yaml  pyproject.toml  requests.yaml  requirements.txt  sample_catalog.yaml  sample_config.yaml  sample_demo_monikers.yaml  sample_domains.yaml  sample_models.yaml  sql_catalog.db  start.py  test_assurance_tiers.py  test_auth.py  test_catalog.py  test_risk_cvar.py
client/: README.md  pyproject.toml
client/moniker_client/: __init__.py  client.py  config.py
client/moniker_client/adapters/: __init__.py  base.py  bloomberg.py  excel.py  mock_excel.py  mock_oracle.py  mock_rest.py  mock_snowflake.py  oracle.py  refinitiv.py  rest.py  snowflake.py  static.py
demo/: hydrate_queue.py  sample_queries.py
deployments/: README.md  test-all.sh
deployments/aws/: DEPLOYMENT_CHECKLIST.md  README.md
deployments/aws/kubernetes/base/: configmap.yaml  java-resolver.yaml  kustomization.yaml  namespace.yaml  python-admin.yaml  secrets.yaml
deployments/aws/scripts/: deploy.sh  health-check.sh  migrate-db.sh
deployments/aws/terraform/: main.tf  outputs.tf  variables.tf
deployments/aws/terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
deployments/aws/terraform/modules/aurora/: main.tf  (+2 more)
deployments/local/: MULTI_RESOLVER.md  README.md  VERIFICATION.md  bootstrap.py  bootstrap_multi.py  requirements.txt
deployments/render/: Dockerfile.java  Dockerfile.python  README.md  bootstrap.sh  render.yaml
docs/: PARENT_NODE_RESOLUTION.md  README.md  data-assurance-tiers.md  production-caching.md
docs/deprecation/: README.md  business-flow.md  technical.md
examples/: analyst_notebook.py  analyst_quickstart.ipynb  api_demo.py  multi_domain_demo.py  risk_cvar_demo.py
mcp-server-openmoniker/: README.md  server.py  test_harness.py
resolver-go/: POSTGRES_IMPLEMENTATION.md  POSTGRES_SETUP.md  QUICK_START.md  RUN_ME_FIRST.md  TELEMETRY_IMPLEMENTATION.md  VERIFICATION_GUIDE.md  docker-compose.yml  go.mod  queries.sql  schema.sql  test-postgres-sink.sh
resolver-go/cmd/resolver/: main.go
resolver-go/internal/catalog/: loader.go  types.go
resolver-go/internal/config/: config.go
resolver-go/internal/handlers/: resolve.go
resolver-go/internal/service/: service.go  types.go
resolver-go/internal/telemetry/: README.md  batcher.go  emitter.go  events.go  factory.go  sink.go
resolver-go/internal/telemetry/sinks/: console.go  file.go  postgres.go  rotating.go
resolver-java/: .gitignore  Makefile  PERFORMANCE_RESULTS.md  README.md  VERIFICATION_GUIDE.md  benchmark.sh  pom.xml  stress-test.sh
resolver-java/src/main/resources/: application.yaml
src/moniker_svc/: __init__.py  cli.py  config.py  main.py  management_app.py  resolver_app.py  service.py
src/moniker_svc/adapters/: __init__.py  base.py  bloomberg.py  excel.py  mssql.py  oracle.py  refinitiv.py  registry.py  rest.py  snowflake.py  static.py
src/moniker_svc/cache/: __init__.py  memory.py  query_refresh.py  redis.py
src/moniker_svc/catalog/: __init__.py  loader.py  registry.py  serializer.py  types.py
src/moniker_svc/config_ui/: models.py  routes.py
src/moniker_svc/config_ui/static/: index.html
src/moniker_svc/dashboard/: routes.py
src/moniker_svc/dashboard/static/: index.html
src/moniker_svc/dialect/: __init__.py  mssql.py  registry.py
src/moniker_svc/domains/: __init__.py  loader.py  models.py  registry.py  routes.py  serializer.py  types.py
src/moniker_svc/domains/static/: index.html
src/moniker_svc/governance/: __init__.py  circuit_breaker.py  rate_limiter.py
src/moniker_svc/identity/: __init__.py  extractor.py
src/moniker_svc/models/: __init__.py  api_models.py  loader.py  registry.py  routes.py  serializer.py  types.py
src/moniker_svc/models/static/: index.html
src/moniker_svc/moniker/: __init__.py  parser.py  types.py
src/moniker_svc/requests/: __init__.py  loader.py  models.py  registry.py  routes.py  types.py
src/moniker_svc/requests/static/: api_guide.html  index.html
src/moniker_svc/sql_catalog/: __init__.py  analyzer.py  db.py  importer.py  models.py  repository.py  routes.py
src/moniker_svc/sql_catalog/static/: index.html
src/moniker_svc/telemetry/: __init__.py  batcher.py  db.py  emitter.py  events.py
src/moniker_svc/telemetry/sinks/: __init__.py  base.py  console.py  file.py  zmq.py
tests/: __init__.py  conftest.py  test_risk_cvar.py
tests/commods/: __init__.py
tests/domains/: __init__.py  test_domain_mapping.py
tests/integration/: test_moniker_parser.py  test_telemetry.py
tests/integration/domains/: test_ownership_inheritance.py
tests/integration/govies/: __init__.py  test_treasury.py
tests/integration/mocks/: __init__.py
tests/integration/mortgages/: test_pools.py
tests/integration/rates/: __init__.py  test_swaps.py
tests/integration/requests/: __init__.py  test_request_persistence.py  test_request_workflow.py
tests/integration/risk/: test_cvar.py
tests/mocks/: oracle_risk_mock.py
tests/mortgages/: __init__.py
tests/stress/: gen_catalog.py  harness.py
(+61 files in other folders)
