[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moniker-tests"
version = "0.1.0"
description = "Integration tests for Moniker service - separate from service code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Data Platform Team", email = "data-platform@firm.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "moniker-svc>=0.1.0",      # The service being tested
    "moniker-data>=0.1.0",     # Test fixtures (separate repo)
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",              # For API testing
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",       # Parallel test execution
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "risk: tests for risk domain",
    "govies: tests for govies domain",
    "rates: tests for rates domain",
    "mortgages: tests for mortgages domain",
    "domains: tests for domain mapping and ownership inheritance",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moniker_tests"]
