[project]
name = "moniker-client"
version = "0.1.0"
description = "Python client library for the Moniker Service - unified data access across the firm"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.26.0",
]

[project.optional-dependencies]
# Database connections
snowflake = ["snowflake-connector-python>=3.6.0"]
oracle = ["oracledb>=2.0.0"]

# File formats
excel = ["openpyxl>=3.1.0"]
parquet = ["pyarrow>=14.0.0"]

# Financial data providers (require commercial licenses)
bloomberg = ["blpapi>=3.19.0"]
refinitiv = ["eikon>=1.1.0", "refinitiv-data>=1.5.0"]

# All common adapters (excluding commercial)
all = [
    "snowflake-connector-python>=3.6.0",
    "oracledb>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
]

# Development
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moniker_client"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
